# lstm_optimize

./: CMakeLists.txt  README.md  Untitled.ipynb  auto.sh
data/: train_use_lstm.csv
include/: fast_math.h  fullconnect.h  lstm_params.h  lstm_qua_params.h  lstmcell.h  lstmunion.h  params.h
models/: lstm.tflite  lstm_full_qua.tflite  lstm_qua.tflite
models/lstm/: keras_metadata.pb  saved_model.pb
models/lstm/variables/: variables.data-00000-of-00001  variables.index
src/: fullconnect.c  lstmcell.c  lstmunion.c  main.c
tools/: convert.py  qua_test.py  read_tflite.py  test_tflite.py  train.py
